First version of introduction

--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -1,6 +1,7 @@
 %-------------------
 %-------------------
 \chapter{Grundlagen}
+\label{chapter:basics}
 %  Vergleich von Techniken, was gibt es alles, was wurde am Ende verwendet und warum
 
 %--------------------------------
