--- a/latex/future_work.tex
+++ b/latex/future_work.tex
@@ -1,6 +1,7 @@
 %-----------------------------------------------------
 %-----------------------------------------------------
-\chapter{Erweiterungs- und Verbesserungsmöglichkeiten}
+\chapter{Fazit und Ausblick}
+\label{chapter:conclusion}
 
 \begin{itemize}
  \item Muskeln, Haut \etc anbauen
