--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -2,22 +2,30 @@
 %-------------------
 \chapter{Einleitung}
 
-Idee und Ziel
+Wirbeltiere sind allgegenwärtig, sowohl im alltäglichen Leben, als auch in Computerspielen und Filmen. Es besteht also ein stetiger Bedarf an 3D-Modellen von Wirbeltieren. Dieser wird in den meisten Fällen durch Künstler gedeckt, die viel Zeit und Arbeit in die Modelle stecken. Algorithmen, die diese Abläufe beispielsweise durch prozedurale Generierung vereinfachen könnten, gibt es nicht viele.
 
-\begin{itemize}
- \item Theorie + Implementierung
- \item prozedurale Generierung
- \item Es gibt schon Pflanzen, Landschaften, Wolken \etc aber wenig zu Tieren
- \item viele verschiedene (und möglicherweise doch ähnliche) Tiere generieren für Spiel/Film
- \item Inspiration für Künstler, 3D-Animation
-    \begin{itemize}
-     \item Skelett darf nicht zu abstrakt sein, da es sonst zu wenig Informationen zum konkreten Tier liefert.
-     \item Ein detailliertes Skelett ist für Wesen sinnvoll, die es so noch nicht gibt bzw. wo man keine richtige Vorstellung davon hat wie es "`funktioniert"', z.B. bei mehr Gliedmaßen.
-    \end{itemize}
- \item Einschränkung auf Skelett, da sonst zu umfangreich für eine Masterarbeit
- \item Wirbeliere, da Skelette sehr ähnliche
- \item möglicherweise interaktive Bedienung
- \item auch fiktive Tiere
-\end{itemize}
+% Ziel
+Das Ziel dieser Arbeit ist es den Arbeitsaufwand der Künstler zu verringern, indem eine Möglichkeit geschaffen wird Wirbeltierskelette automatisiert zu generieren. Diese Skelette können dann die Grundlage für die Modellierung eines kompletten Wirbeltiers bilden.
+Einerseits können sie dabei als Inspiration dienen. Sie können einen Anhaltspunkt zu Körperform und Proportionen bieten und zu möglichen Bewegungsabläufen. Außerdem kann schnell eine große Auswahl an Skeletten generiert werden.\\
+Andererseits können die Skelette eine Grundlage für Modelle bilden, die zusätzlich auch Muskeln und Haut simulieren.
+In beiden Fällen darf das Modell nicht zu abstrakt sein, da es sonst zu wenig Informationen zum Aufbau des konkreten Tiers liefert.\\
+Es soll also ein Skelett generiert werden, dass genug Knochen enthält um realistisch zu wirken, aber auch nicht zu viele um den Aufwand für die Generierung und die Programmierung des Algorithmus im Rahmen zu halten.
+
+% Warum nur Wirbeliere?
+Der Grund dafür, dass sich diese Arbeit auf Wirbeltierskelette einschränkt ist, dass der Skelettaubau von Wirbeltieren nicht zu stark variiert. 
+Je mehr Details betrachtet werden, desto mehr Unterschiede gibt es, aber der grobe Aufbau ist bei allen Wirbeltieren sehr ähnlich. Die Grundlagen zur Biologie der Wirbeltiere, die für diese Arbeit notwendig sind, werden in Kapitel \ref{chapter:biology} vorgestellt, die technischeren Grundlagen in Kapitel \ref{chapter:basics}.
+
+% Methoden+Aufbau
+Die wichtigsten Schritte des Algorithmus werden im Folgenden kurz angerissen, um einen Überblick über die Arbeit zu geben.
+Die Datengrundlage für den Algorithmus schafft eine \emph{Principal Component Analyis} (Hauptkomponentenanalyse) auf annotierten 2D-Skelett"-bildern (Kapitel \ref{chapter:pca}). 
+Die Knochen des Skeletts werden dann mit Hilfe einer kontextfreien Grammatik generiert und gleichzeitig angeordnet (Kapitel \ref{chapter:skeleton_generation}). 
+Zum Schluss wird aus existierenden 3D-Modellen von einzelnen Knochen ein 3D-Modell des generierten Skeletts erstellt (Abschnitt \ref{bone_models})).\\
+Zunächst generiert der Algorithmus zufällige Skelette. Es werden aber auch Benutzereingaben, \zb zur Anzahl der Extremitäten, berücksichtigt oder Variationen zu schon bestehenden Skeletten generiert (Kapitel \ref{chapter:additional_features}). \\
+Zusätzliche Informationen zu Implementierungsdetails sind in Kapitel \ref{chapter:implementation_detail} zu finden und abgerundet wird die Arbeit mit Fazit und Ausblick in Kapitel \ref{chapter:conclusion}.
+
+% Aufbau der Arbeit
+% In Kapitel \ref{chapter:biology} werden zunächst einige Grundlagen zur Biologie der Wirbeltiere vorgestellt, die später zum Verständnis des Algorithmus nötig sind. Die technischeren Grundlagen werden in Kapitel \ref{chapter:basics} erklärt.\\
+% Kapitel \ref{chapter:pca} widmet sich der \emph{Principal Component Analyis}. Es wird beschrieben auf welchen Daten und mit welchen Ergebnissen sie im Rahmen des Algorithmus angewandt wird. Diese Analyse ist auch der erste Schritt des Algorithmus, der in Kapitel \ref{chapter:skeleton_generation} ausführlich beschrieben wird. Zusätzliche Funktionen, wie das Laden und Speichern von Skeletten oder die Erzeugung von Variationen zu gespeicherten Skeletten werden in Kapitel \ref{chapter:additional_features} vorgestellt.
+% Kapitel \ref{chapter:implementation_detail} versammelt alle Details zur Implementierung und abgerundet wird die Arbeit mit Fazit und Ausblick in Kapitel \ref{chapter:conclusion}.
 
 
